# batchcor-rna-embeds

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
batchcor_rna_emb/: __init__.py  _torchtext_shim.py  compass_embedder.py  config.py  data_io.py  geneformer_embedder.py  logging_config.py  split_utils.py  survival_targets.py
batchcor_rna_emb/batch_correction/: README.md  __init__.py  cae.py  config.py  dann.py  harmony.py  mmd_loss.py  run_cae_correction.py  scvi_corrector.py
batchcor_rna_emb/feature_calc/: README.md  gene_mapping.py  gene_mapping_geneformer.py
batchcor_rna_emb/metrics/: __init__.py  aggregation.py  batch_metrics.py  bio_metrics.py
batchcor_rna_emb/modeling/: __init__.py  build_unified_adata.py  cohort_registry.py  evaluation.py  feature_extraction.py  finetune_scgpt_survival.py  fold_runner.py  harmonize_targets.py  pack_embeddings.py  plotting.py  scgpt_embeddings.py  train.py
batchcor_rna_emb/stress_test/: README.md  __init__.py  run_75_acceptance_criterion.py  splits.py  survival_benchmark.py  v4_definitive_pipeline.py  v5_strict_pipeline.py
batchcor_rna_emb/visualization/: __init__.py  plots.py
metrics/: ALL_METRICS_SUMMARY.md  metrics_tables.ipynb
metrics_csv/: acceptance_75_scores.csv  batch_correction_metrics.csv  batch_correction_metrics.json  harmonize_targets_summary.csv  v4_cindex_survival_matrix.csv  v4_classification_results.csv  v4_final_leaderboard.csv  v4_km_risk_scores.csv  v4_ood_pub_results.csv  v4_per_pub_best.csv  v4_response_auc_matrix.csv  v4_survival_results.csv  v5_os_bin35_cv_results.csv  v5_os_bin35_ood_per_cohort.csv  v5_os_bin35_summary.csv
notebooks/: 0.eda_data_prep.ipynb  1.0-geneformer-embedding-pipeline.ipynb  1.batch_correction.ipynb  2.metrics_modeling_stress_test.ipynb  3.compass_embedding.ipynb  3.geneformer_embedding.ipynb  3b.compass_umap_viz.ipynb  3b.geneformer_umap_viz.ipynb  3c.compass_embedding_pretrainer.ipynb  3d.compass_pft_vs_pt_comparison.ipynb  3e.survival_and_splits.ipynb  4.scvi_batch_correction.ipynb  4b.scvi_batch_correction_improved.ipynb  5.scvi_adversarial_correction.ipynb  6.two_opt_adversarial_correction.ipynb  7.leak_free_evaluation.ipynb
references/: data_exch_str.md  project_descr.md
scripts/: build_sota_notebook.py  export_embeddings_for_merge.py  refresh_v4_bar_plots.py
tests/: test_cae.py  test_data.py  test_scgpt_pipeline.py
visualizations/: plot_counts_vs_tpm.py  plot_pca_kills_signal.py  plot_v5_metrics.py  visualizations_SOTA_analytics.ipynb  visualizations_cae_correction.ipynb
