[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "batchcor_rna_emb"
version = "0.0.1"
description = "This project is about evaluating batch correction influence on downstream task performance of clinical endpoint classifiers that were based on RNA embeddings of Foundation RNA models. BG Internship 2026(Group 7)."
authors = [
  { name = "BG_Internship" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    # --- existing ---
    "ipython",
    "jupyterlab",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "ipykernel",
    # --- data I/O ---
    "anndata>=0.10",
    "zarr>=3.0",
    # --- batch correction & embedding ---
    "scanpy>=1.9,<1.11",
    "harmonypy>=0.0.9",
    "umap-learn>=0.5",
    # --- foundation models ---
    "immuno-compass>=2.3",
    "einops",
    "gdown",
    "qnorm",
    # --- DANN ---
    "torch>=2.0",
    # --- structural metrics ---
    "scib-metrics>=0.5",
    "scipy>=1.11",
    # --- downstream ML ---
    "tabpfn>=2.0",
    "lightautoml>=0.3",
    "optuna>=3.0",
    "kneed>=0.8",
    # --- survival ---
    "lifelines>=0.27",
    "scikit-survival>=0.22",
    # --- logging & viz ---
    "loguru>=0.7",
    "seaborn>=0.12",
    "tqdm>=4.0",
    "mygene>=3.2.2"
]
requires-python = "~=3.11.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"


[tool.ruff]
line-length = 99
src = ["batchcor_rna_emb"]
include = ["pyproject.toml", "batchcor_rna_emb/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["batchcor_rna_emb"]
force-sort-within-sections = true

